# content-moderation-ml

./: Procfile  README.md  pyproject.toml
services/inference/: app.py
services/inference/models/: image.py  text.py
src/serving/: decision.py  main.py  metrics.py  schemas.py
ui/moderation-ui/: index.html  package-lock.json  package.json
ui/moderation-ui/src/: App.jsx  index.css
