[tool.poetry]
name = "content-moderation-ml"
version = "0.1.0"
description = "Real-time multi-modal content moderation API"
authors = ["Prerana MN"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
httpx = "^0.28.1"
redis = "^7.1.0"
requests = "^2.32.5"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
